--- a/UI/Homepage.html
+++ b/UI/Homepage.html
@@ -15,7 +15,6 @@
                     </a>
 
                 </div>
-
                 <div class="user-icon">
                     <a href="#" title="Профиль">
                         <img src="dog.jpg"/>
@@ -56,6 +55,12 @@
                     <img src="dog.jpg">
                 </div>
                 <nav class="info">
+                    <img class="user-icon-info" src="dog.jpg"/>
+                    <div class="comments">
+                        <form class="form-comments">
+                            <textarea class="area-comments" placeholder="Добавьте комментарий..."></textarea>
+                        </form>
+                    </div>
                     <button class="delete" type="button">
                         <img src="garbage.png">
                     </button>
@@ -64,9 +69,15 @@
 
             <article id="post_2" class="photo-post">
                 <div class="photo">
-                    <img src="dog.jpg">
+                    <img src="cat.jpg">
                 </div>
                 <nav class="info">
+                    <img class="user-icon-info" src="dog.jpg"/>
+                    <div class="comments">
+                        <form class="form-comments">
+                            <textarea class="area-comments" placeholder="Добавьте комментарий..."></textarea>
+                        </form>
+                    </div>
                     <button class="delete" type="button">
                         <img src="garbage.png">
                     </button>
