--- a/UI/Homepage.html
+++ b/UI/Homepage.html
@@ -56,13 +56,23 @@
                 </div>
                 <nav class="info">
                     <img class="user-icon-info" src="dog.jpg"/>
+                    <div class="user-info">
+                        <span>CoolDog</span>
+                    </div>
+                    <!--<span class="">Это я!</span>-->
                     <div class="comments">
                         <form class="form-comments">
                             <textarea class="area-comments" placeholder="Добавьте комментарий..."></textarea>
                         </form>
                     </div>
-                    <button class="delete" type="button">
+                    <button class="delete icon" type="button">
                         <img src="garbage.png">
+                    </button>
+                    <button class="like icon" type="button">
+                        <img src="heart.png">
+                    </button>
+                    <button class="change icon" type="button">
+                        <img src="pen.png">
                     </button>
                 </nav>
             </article>
@@ -73,13 +83,23 @@
                 </div>
                 <nav class="info">
                     <img class="user-icon-info" src="dog.jpg"/>
+                    <div class="user-info">
+                        <span>CoolDog</span>
+                    </div>
+                    <!--<span class="">Это я!</span>-->
                     <div class="comments">
                         <form class="form-comments">
                             <textarea class="area-comments" placeholder="Добавьте комментарий..."></textarea>
                         </form>
                     </div>
-                    <button class="delete" type="button">
+                    <button class="delete icon" type="button">
                         <img src="garbage.png">
+                    </button>
+                    <button class="like icon" type="button">
+                        <img src="heart.png">
+                    </button>
+                    <button class="change icon" type="button">
+                        <img src="pen.png">
                     </button>
                 </nav>
             </article>
