--- a/UI/Homepage.html
+++ b/UI/Homepage.html
@@ -46,6 +46,7 @@
                         <img src="searching.png"/>
                     </a>
                 </div>
+                <!--<div class="drop"></div>-->
             </nav>
         </aside>
 
@@ -120,4 +121,5 @@
 
         </footer>
     </body>
+<script src = "functional.js"></script>
 </html>
