+async adding & like

--- a/PhotoPortal/src/main/webapp/index.html
+++ b/PhotoPortal/src/main/webapp/index.html
@@ -2,16 +2,15 @@
 <html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-
+    <link rel="stylesheet" type="text/css" href="../resources/css/styles.css">
     <title>Лента</title>
-    </head>
+</head>
 <body>
 <header>
     <nav>
         <div class="page-icon">
 
-            <img src="клевер.png"/>
+            <img src="resources/images/клевер.png"/>
             <a href="#" title="PhotoPortal">
                 <span>Лента</span>
             </a>
@@ -23,7 +22,7 @@
         </div>
         <div class="log-in">
             <a href="#" title="Войти">
-                <img src="log_in.png"/>
+                <img src="resources/images/log_in.png"/>
             </a>
         </div>
     </nav>
@@ -33,7 +32,7 @@
         <div class="add-post" >
             <a title="Добавить пост">
 
-                <img src="plus.png"/>
+                <img src="resources/images/plus.png"/>
             </a>
         </div>
 
@@ -41,13 +40,13 @@
             <a title="Профиль">
 
 
-                <img src="profile.png"/>
+                <img src="resources/images/profile.png"/>
             </a>
         </div>
         <div class="searching">
 
             <a title="Поиск">
-                <img src="searching.png"/>
+                <img src="resources/images/searching.png"/>
             </a>
         </div>
     </nav>
@@ -91,15 +90,15 @@
     </article>
     <article id="adding">
         <div class="default-img">
-            <img src="default-img.png"/>
+            <img src="resources/images/default-img.png"/>
         </div>
         <nav id="filters">
-            <img class="grayscale" src="cat.jpg" height="35%" width="100%"/>
-            <img class="brightness" src="cat.jpg" height="35%" width="100%"/>
-            <img class="contrast" src="cat.jpg" height="35%" width="100%"/>
-            <img class="hue-rotate" src="cat.jpg" height="35%" width="100%"/>
-            <img class="saturate" src="cat.jpg" height="35%" width="100%"/>
-            <img class="sepia" src="cat.jpg" height="35%" width="100%"/>
+            <img class="grayscale" src="resources/images/cat.jpg" height="35%" width="100%"/>
+            <img class="brightness" src="resources/images/cat.jpg" height="35%" width="100%"/>
+            <img class="contrast" src="resources/images/cat.jpg" height="35%" width="100%"/>
+            <img class="hue-rotate" src="resources/images/cat.jpg" height="35%" width="100%"/>
+            <img class="saturate" src="resources/images/cat.jpg" height="35%" width="100%"/>
+            <img class="sepia" src="resources/images/cat.jpg" height="35%" width="100%"/>
         </nav>
         <form id="adding-form">
             <input id="description" type="text" placeholder="Добавьте описание" required="required">
@@ -128,7 +127,7 @@
     </nav>
 </footer>
 </body>
-<script src = "Model.js"></script>
-<script src = "View.js"></script>
-<script src="Controller.js"></script>
+<script src = "resources/js/Model.js"></script>
+<script src = "resources/js/View.js"></script>
+<script src="resources/js/Controller.js"></script>
 </html>
