--- a/PhotoPortal/src/main/webapp/index.html
+++ b/PhotoPortal/src/main/webapp/index.html
@@ -127,7 +127,8 @@
     </nav>
 </footer>
 </body>
-<script src = "resources/js/Model.js"></script>
+<script src = "resources/js/PostService.js"></script>
+<script src = "resources/js/LoginService.js"></script>
 <script src = "resources/js/View.js"></script>
 <script src="resources/js/Controller.js"></script>
 </html>
