--- a/PhotoPortal/src/main/webapp/index.html
+++ b/PhotoPortal/src/main/webapp/index.html
@@ -85,6 +85,8 @@
         <form>
             <input id="login" type="text" placeholder="Введите логин" required="required"/>
             <input id="password" type="password" placeholder="Введите пароль" required="required"/>
+            <input id="repeat_password" type="password" placeholder="Введите ещё раз пароль" />
+            <span id="registration">Вы ещё не зарегистрировались?</span>
             <button id="enter"><p>LOG IN</p></button>
         </form>
     </article>
