--- a/PhotoPortal/src/main/webapp/index.html
+++ b/PhotoPortal/src/main/webapp/index.html
@@ -76,8 +76,8 @@
     </section>
     <article id="edit">
         <form>
-            <input id="edit-description" type="text" />
-            <input id="edit-hashtags" type="text" />
+            <input id="edit-description" type="text" placeholder="Добавьте описание"/>
+            <input id="edit-hashtags" type="text" placeholder="Добавьте хэштеги"/>
             <button id="edit-enter"><p>Изменить пост</p></button>
         </form>
     </article>
